samples/_failures_safe/1761457444_9bf1cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_720bf7ae.c: In function ‘main’:
./samples/SAFE/__tmp_720bf7ae.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("Original: ");
      |     ^~~~~~
